Arreglando el codigo de index.html en confianza y nuestro equipo las imagenes

--- a/index.html
+++ b/index.html
@@ -233,17 +233,17 @@
                 </div>
                 <div class="container__trust container__box-cardPrimary">
                     <div class="card_trust box__card-Primary">
-                        <img src="./Imagenes/Confianza/Ambiente.png" alt="">
+                        <img src="./imagenes/Confianza/Ambiente.png" alt="">
                         <h2>Creamos un ambiente acogedor de aprendizaje</h2>
                         <p>Creando un clima propicio para atender al estudiante que aprende en los espacios fisicos o virtuales y las condiciones que estimulan el aprendizaje del estudiante.</p>
                     </div>
                     <div class="card_trust box__card-Primary">
-                        <img src="./Imagenes/Confianza/Colectivo.png" alt="">
+                        <img src="./imagenes/Confianza/Colectivo.png" alt="">
                         <h2>Promovemos el aprendizaje activo y colaborativo</h2>
                         <p>Los estudiantes desarrollen nuevas ideas y conocimientos mediante la construcción colectiva del conocimiento común y asi propicia el desarrollo de competencias personales, interpersonales y sociales.</p>
                     </div>
                     <div class="card_trust box__card-Primary">
-                        <img src="./Imagenes/Confianza/Evaluamos.png" alt="">
+                        <img src="./imagenes/Confianza/Evaluamos.png" alt="">
                         <h2>Evaluamos el aprendizaje</h2>
                         <p>Son los procedimientos que utiliza el docente para recoger información de forma sistemática sobre el aprendizaje de los estudiantes.</p>
                     </div>
@@ -261,16 +261,16 @@
                 </div>
                 <div class="container__box-abaut">
                     <div class="box__abaut">
-                        <img src="./Imagenes/Nuestro equipo/atencion-al-cliente G.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente G.png equipo/atencion-al-cliente G.png" class="abaut__img-atencion" alt="">
                         <h1>Glenda Chalco T</h1>
                         <p>Asesora</p>
-                        <a href="https://wa.me/51946339339" ><img src="./Imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51946339339" ><img src="./imagenes/Nuestro equipo/whatsapp.png equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
                     </div>
                     <div class="box__abaut">
-                        <img src="./Imagenes/Nuestro equipo/atencion-al-cliente P.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente P.png equipo/atencion-al-cliente P.png" class="abaut__img-atencion" alt="">
                         <h1>Pablo Luna C</h1>
                         <p>Asesor</p>
-                        <a href="https://wa.me/51983530898" ><img src="./Imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51983530898" ><img src="./imagenes/Nuestro equipo/whatsapp.png equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
                     </div>
                 </div>
                 <a href="" class="btn__text-abaut btn__text">Saber Más</a>
