Modificando el código en index.html en la sección de nuestro equipo las imagenes

--- a/index.html
+++ b/index.html
@@ -261,16 +261,16 @@
                 </div>
                 <div class="container__box-abaut">
                     <div class="box__abaut">
-                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente G.png equipo/atencion-al-cliente G.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente G.png" class="abaut__img-atencion" alt="">
                         <h1>Glenda Chalco T</h1>
                         <p>Asesora</p>
-                        <a href="https://wa.me/51946339339" ><img src="./imagenes/Nuestro equipo/whatsapp.png equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51946339339" ><img src="./imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
                     </div>
                     <div class="box__abaut">
-                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente P.png equipo/atencion-al-cliente P.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente P.png" class="abaut__img-atencion" alt="">
                         <h1>Pablo Luna C</h1>
                         <p>Asesor</p>
-                        <a href="https://wa.me/51983530898" ><img src="./imagenes/Nuestro equipo/whatsapp.png equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51983530898" ><img src="./imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
                     </div>
                 </div>
                 <a href="" class="btn__text-abaut btn__text">Saber Más</a>
