--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <header id="header">
         <div class="container__header">
             <div class="logo">
-                <a href="index.html"><img src="imagenes/Logo/Logo letras con color.png" alt="Logo de la empresa"></a>
+                <a href="index.html"><img src="imagenes/imaganes inicio/Logo/Logo letras con color.png" alt="Logo de la empresa"></a>
             </div>
 
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="#">Cursos</a></li>
                         <li><a href="#">Contactos</a></li>
                     </ul>
@@ -62,7 +62,7 @@
                     <a href="#" class="btn__text-cover btn__text">Empezar</a>
                 </section>
                 <section class="image__cover">
-                    <img src="imagenes/Portada/Imagen portada 5.png" alt="">
+                    <img src="imagenes/imaganes inicio/Portada/Imagen portada 5.png" alt="">
                 </section>
             </div>
         </div>
@@ -99,7 +99,7 @@
             </div>
     
             <div class="image-container">
-                <img src="imagenes/Msión y Visión/ceo-24-10f9b.png" alt="Persona" class="person-image">
+                <img src="imagenes/imaganes inicio/Msión y Visión/Misión 1.png" alt="Persona" class="person-image">
             </div>
         </div>
 
@@ -118,10 +118,10 @@
 
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Gestión Publica.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Gestión Publica.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/01 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/01 iconos diploma-de-graduacion.png" alt="">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">Gestión Pública</h4>
@@ -130,10 +130,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/SIAF.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/SIAF.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/02 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/02 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">SIAF - Sistemas Integrados de Administración Financiera</h4>
@@ -142,10 +142,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Actualización gestión publica.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Actualización gestión publica.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/01 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/01 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">SEACE - Sistema Electrónico de Contrataciones del Estado</h4>
@@ -154,10 +154,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Contrataciones del estado.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Contrataciones del estado.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/02 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/02 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">SIGA - Sistema Integrado de Gestión Administrativa</h4>
@@ -166,10 +166,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Administración.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Administración.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/01 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/01 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">Contrataciones del Estado</h4>
@@ -178,10 +178,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Gestión Municipal.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Gestión Municipal.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/02 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/02 iconos diploma-de-graduacion.png" alt=diploma-de-graduacion"">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">Administración Pública</h4>
@@ -190,10 +190,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/SSOMA.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/SSOMA.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/01 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/01 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">SSOMA Seguridad Salud Ocupacional y Medio Ambiente</h4>
@@ -202,10 +202,10 @@
                         </div>
                         <div class="swiper-slide card">
                             <div class="imagen-box">
-                                <img src="imagenes/Cursos/Políticas Públicas y Gestión Estatal.jpg" alt="">
+                                <img src="imagenes/imaganes inicio/Cursos/Políticas Públicas y Gestión Estatal.jpg" alt="">
                             </div>
                             <div class="profile-details">
-                                <img src="imagenes/Iconos/02 iconos diploma-de-graduacion.png" alt="">
+                                <img src="imagenes/imaganes inicio/Iconos/01 iconos diploma-de-graduacion.png" alt="diploma-de-graduacion">
                                 <div class="texto-curso">
                                     <h5 class="Curso">Curso</h5>
                                     <h4 class="nombre-curso">Políticas Públicas y Gestión Estatal</h4>
@@ -233,17 +233,17 @@
                 </div>
                 <div class="container__trust container__box-cardPrimary">
                     <div class="card_trust box__card-Primary">
-                        <img src="./imagenes/Confianza/Ambiente.png" alt="">
+                        <img src="./imagenes/imaganes inicio/Confianza/ambiente 2.png" alt="">
                         <h2>Creamos un ambiente acogedor de aprendizaje</h2>
                         <p>Creando un clima propicio para atender al estudiante que aprende en los espacios fisicos o virtuales y las condiciones que estimulan el aprendizaje del estudiante.</p>
                     </div>
                     <div class="card_trust box__card-Primary">
-                        <img src="./imagenes/Confianza/Colectivo.png" alt="">
+                        <img src="./imagenes/imaganes inicio/Confianza/Colectivo 2.png" alt="">
                         <h2>Promovemos el aprendizaje activo y colaborativo</h2>
                         <p>Los estudiantes desarrollen nuevas ideas y conocimientos mediante la construcción colectiva del conocimiento común y asi propicia el desarrollo de competencias personales, interpersonales y sociales.</p>
                     </div>
                     <div class="card_trust box__card-Primary">
-                        <img src="./imagenes/Confianza/Evaluamos.png" alt="">
+                        <img src="./imagenes/imaganes inicio/Confianza/Evaluamos 2.png" alt="">
                         <h2>Evaluamos el aprendizaje</h2>
                         <p>Son los procedimientos que utiliza el docente para recoger información de forma sistemática sobre el aprendizaje de los estudiantes.</p>
                     </div>
@@ -261,16 +261,16 @@
                 </div>
                 <div class="container__box-abaut">
                     <div class="box__abaut">
-                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente G.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/imaganes inicio/Nuestro equipo/mujer.png" class="abaut__img-atencion" alt="">
                         <h1>Glenda Chalco T</h1>
                         <p>Asesora</p>
-                        <a href="https://wa.me/51946339339" ><img src="./imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51946339339" ><img src="./imagenes/imaganes inicio/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt="imagen whatsapp"></a>
                     </div>
                     <div class="box__abaut">
-                        <img src="./imagenes/Nuestro equipo/atencion-al-cliente P.png" class="abaut__img-atencion" alt="">
+                        <img src="./imagenes/imaganes inicio/Nuestro equipo/hombre.png" class="abaut__img-atencion" alt="">
                         <h1>Pablo Luna C</h1>
                         <p>Asesor</p>
-                        <a href="https://wa.me/51983530898" ><img src="./imagenes/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt=""></a>
+                        <a href="https://wa.me/51983530898" ><img src="./imagenes/imaganes inicio/Nuestro equipo/whatsapp.png" class="abaut__img-whatsapp" alt="imagen whatsapp"></a>
                     </div>
                 </div>
                 <a href="" class="btn__text-abaut btn__text">Saber Más</a>
@@ -287,7 +287,7 @@
                 <div class="wave" id="wave4"></div>
             </div>
             <div class="logo_footer">
-                <a href=""><img src="imagenes/Logo/Logo blanco.png" alt=""></a>
+                <a href=""><img src="imagenes/imaganes inicio/Logo/Logo blanco.png" alt=""></a>
             </div>
             <ul class="social_icon-footer">
                 <li><a href=""><i class="fa-brands fa-square-facebook"></i></i></a></li>
